package patterns.behavioral.state;

public interface Konsol {

    void kareBas();
    void ucgenBas();
    void yuvarlakBas();
    void xBas();
}
